# purplesky

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: auth.rs  main.rs  route.rs
src/atproto_api/: auth_service.rs  mod.rs  user_service.rs
src/components/: blog.rs  home.rs  login.rs  mod.rs  navbar.rs  profile.rs  reels.rs  search.rs  upload.rs
