[package]
name = "purplesky"
version = "0.0.1"
authors = ["ramonwest <ramon.west.software@gmail.com>"]
edition = "2025"

[dependencies]
dioxus = { version = "0.6.0", features = ["router"] }

[features]
default = ["mobile"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
